[package]
name = "iris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
media-state = { git = "https://github.com/SubconsciousCompute/rs-media-devices-state" }
reqwest = { version = "0.11", features = ["blocking", "cookies",  "json"] }
serde = "1.0.160"
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }

